--- a/config.json
+++ b/config.json
@@ -1,15 +1,17 @@
 {
-  "attention_probs_dropout_prob": 0.1,
+  "_name_or_path": "impira/layoutlm-document-qa",
   "architectures": [
     "LayoutLMForQuestionAnswering"
   ],
+  "attention_probs_dropout_prob": 0.1,
+  "bos_token_id": 0,
+  "classifier_dropout": null,
   "custom_pipelines": {
     "document-question-answering": {
       "impl": "pipeline_document_question_answering.DocumentQuestionAnsweringPipeline",
       "pt": "AutoModelForQuestionAnswering"
     }
   },
-  "bos_token_id": 0,
   "eos_token_id": 2,
   "gradient_checkpointing": false,
   "hidden_act": "gelu",
@@ -26,7 +28,7 @@
   "pad_token_id": 1,
   "position_embedding_type": "absolute",
   "tokenizer_class": "RobertaTokenizer",
-  "transformers_version": "4.6.1",
+  "transformers_version": "4.22.0.dev0",
   "type_vocab_size": 1,
   "use_cache": true,
   "vocab_size": 50265
